# arxiv-data-pipeline

./: .dockerignore  .env  .env.demo  .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yaml  pyproject.toml
docker/airflow/dags/: arxiv_data_fetcher.py
docker/grafana_data/json/: arxiv_validation_dashboard.json  kafka_exporter_dashboard.json
docker/prometheus/: prometheus.yml
docker/spark-iceberg/conf/: spark-defaults.conf
docs/: project_overview.md  project_tech_stack_description.md  project_technical_stack.md  spark_demo.md
docs/arXiv_api_example/: f01755eb.xml
docs/gx_demo/: crossref_metadata_source-crossref_metadata_asset.html
src/: config.ini  config.py
src/client/: iceberg_client.py  kafka_base_client.py  kafka_consumer_client.py  kafka_producer_client.py  postgresql_client.py  prometheus_gateway_client.py
src/data_fetcher/: arxiv_fetcher.py  crossref_fetcher.py
src/data_lineage/: logger.py
src/data_processor/: arxiv_parser.py  crossref_parser.py
src/data_validator/: arxiv_validator.py  base.py  crossref_validator.py
src/kafka_message/: arxiv_to_crossref_message.py
src/monitoring/: arxiv_monitor.py  crossref_monitor.py  fetcher_monitor.py  prometheus.yml
src/pipeline/: arxiv_pipeline.py  crossref_pipeline.py
src/schema/: arxiv_schema.py  base.py  crossref_schema.py  kafka_schema.py
src/schema_validator/: base.py  metrics.py
src/script/: arxiv_fetch_task.parquet  init_iceberg_table.py  init_postgres_table.py
src/storage/: iceberg_storage.py
src/utils/: file_utils.py  git_utils.py  http_client.py
